# kinda-game-of-life

./: Cargo.toml
src/: cell.rs  grid.rs  main.rs
