[package]
name = "gol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
getrandom = "0.2.8"
log = "0.4.17"
pixels = "0.11.0"
rand = "0.8.5"
randomize = "3.0.1"
wgpu = "0.15.1"
winit = "0.28.1"
winit_input_helper = "0.14.0"
